更改了a.text和index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<div>1次修改了index.html的内容</div>
-<div>2再次修改了index.html的内容</div>
-<div>3次修改了index.html的内容</div>
-<div>修改了index.html的内容</div>
-<div>再次修改了index.html的内容</div>
-<div>再次修改了index.html的内容2次</div>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+   <div id="div">
+       <h1>题目一</h1>
+       <p class="class1">
+           yes we are ready !!!
+       </p>
+   </div>
+</body>
+</html>
