修改了index文件

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <div id="div">
        <h1>题目一</h1>
        <h1>题目二</h1>
+       <h1>题目三</h1>
        <p class="class1">
            yes we are ready !!!
        </p>
