--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 <body>
    <div id="div">
-       <h1>题目一</h1>
-       <h1>题目一</h1>
-       <h1>题目一</h1>
-       <h1>题目一</h1>
-       <h1>题目一</h1>
+       <h1>题目实则是的方法</h1>
        <p class="class1">
            yes we are ready !!!
        </p>
