--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body>
    <div id="div">
        <h1>题目实则是的方法</h1>
-       <h1>1</h1>
-       <p class="class1">
-           yes we are ready !!!
-       </p>
-       <h1>2</h1>
-       <h1>傻逼</h1>
-       <h1>傻逼</h1>
+       <h1>题目实则是的方法</h1>
+       <h1>题目实则是的方法</h1>
+       <h1>题目实则是的方法</h1>
+       <h1>题目实则是的方法</h1>
+       <h1>题目实则是的方法</h1>
+       <h1>题目实则是的方法</h1>
+
    </div>
 </body>
 </html>
