--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
 <body>
    <div id="div">
        <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-
+       <h2>真的很让人为难啊</h2>
+       <h3>真的很让人为难啊</h3>
    </div>
 </body>
 </html>
