--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
    <div id="div">
        <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
+       <h1>曾多次调查动次打次</h1>
+       <h1>发v发v发vfvgtgvtvtt</h1>
+       <h1>而反而反而法</h1>
+       <h1>同一天一天天</h1>
+       <h1>动次打次</h1>
+       <h1>头一天一天</h1>
 
    </div>
 </body>
