第一次内容

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
 <body>
    <div id="div">
        <h1>题目实则是的方法</h1>
-        <p>jgjhgjgyukf</p>
-        <p>jgjhgjgyukf</p>
-        <p>jgjhgjgyukf</p>
-        <p>jgjhgjgyukf</p>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-       <h1>题目实则是的方法</h1>
-
-
+       <div>这是第一次尝试的内容</div>
    </div>
 </body>
 </html>
