--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>一定要解决冲突</title>
 </head>
 <body>
    <div id="div">
